--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,4 +3,5 @@
 
 # system level gitconfig settings
 git_config_protocol_map :
-  - { url: 'http://', insteadOf : 'git://' }
+  - { url: 'ssh://git@', insteadOf : 'git://' }
+  - { url: 'ssh://git@', insteadOf : 'https://' }
