--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,7 @@
 ---
 # tasks file for git
-- name: (RedHat) install...
-  when: ansible_os_family == 'RedHat'
-  yum: name={{item}} state=latest
-  with_items:
-    - git
-
-- name: (Debian) install...
-  when: ansible_os_family == 'Debian'
-  apt: name={{item}} state=latest
+- name: install...
+  package: name={{item}} state=latest
   with_items:
     - git
 
