fix for blockinfile. added docs.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,12 @@
 ---
-# defaults file for git
-
 # system level gitconfig settings
 git_config_protocol_map :
-  - { url: 'ssh://git@github.com', insteadOf : 'git://github.com' }
-  - { url: 'https://', insteadOf : 'git://' }
+  - uid: '93f2b82088e744739a4cfb8a3df68925'
+    url: 'ssh://git@github.com'
+    insteadOf : 'git://github.com'
+  - uid: '5446806d328f42dc8be2e6d1e6139aa8'
+    url: 'https://'
+    insteadOf : 'git://'
 
 git_privilege_escalation : True
 git_target_cfg: /etc/gitconfig
