--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,9 @@ git_config_protocol_map :
   - uid: '93f2b82088e744739a4cfb8a3df68925'
     url: 'ssh://git@github.com'
     insteadOf : 'git://github.com'
+  - uid: '0483a896-fc31-11e6-839d-001b219ca430'
+    url: 'ssh://git@gist.github.com'
+    insteadOf : 'git://gist.github.com'
   - uid: '5446806d328f42dc8be2e6d1e6139aa8'
     url: 'https://'
     insteadOf : 'git://'
