--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,14 +12,16 @@ galaxy_info:
         - 7
     - name: Fedora
       versions:
+        - 23
         - 24
+        - 25
     - name: Ubuntu
       versions:
+        - trusty
         - xenial
-    - name: GenericUnix
+    - name: Alpine
       versions:
         - all
-        - any
 
   galaxy_tags:
     - development
