--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,6 +15,9 @@ galaxy_info:
         - 23
         - 24
         - 25
+    - name: Debian
+      versions:
+        - jessie
     - name: Ubuntu
       versions:
         - trusty
