--- a/dcb-os.yml
+++ b/dcb-os.yml
@@ -6,8 +6,10 @@
 - alpine_3.8
 - alpine_3.9
 - alpine_edge
+- archlinux_latest
 - centos_7
 - debian_jessie
+- debian_stretch
 - fedora_23
 - fedora_24
 - fedora_25
