--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,17 +10,18 @@ galaxy_info:
     - name: EL
       versions:
         - 7
+        - 8
     - name: Fedora
       versions:
-        - 23
-        - 24
-        - 25
+        - 31
+        - 32
     - name: Debian
       versions:
-        - jessie
+        - buster
+        - stretch
     - name: Ubuntu
       versions:
-        - trusty
+        - bionic
         - xenial
     - name: Alpine
       versions:
