--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,6 +7,16 @@ galaxy_info:
     - MIT
   min_ansible_version: 2.0
   platforms:
+    - name: Alpine
+      versions:
+        - all
+    - name: Archlinux
+      versions:
+        - all
+    - name: Debian
+      versions:
+        - buster
+        - stretch
     - name: EL
       versions:
         - 7
@@ -15,17 +25,14 @@ galaxy_info:
       versions:
         - 31
         - 32
-    - name: Debian
+    - name: Gentoo
       versions:
-        - buster
-        - stretch
+        - all
     - name: Ubuntu
       versions:
         - bionic
+        - focal
         - xenial
-    - name: Alpine
-      versions:
-        - all
 
   galaxy_tags:
     - development
