make git-lfs optional

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,11 +10,19 @@
       paths:
         - '{{ role_path }}/vars'
 
-- name: install...
+- name: install git os pkgs...
   become: '{{ git_privilege_escalation }}'
   become_user: root
   package:
     name: '{{ git_os_pkgs }}'
+    state: present
+
+- name: install git-lfs os pkgs...
+  when: git_lfs_enable
+  become: '{{ git_privilege_escalation }}'
+  become_user: root
+  package:
+    name: '{{ git_lfs_os_pkgs }}'
     state: present
 
 - name: configurate git
