--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-git_installer_type: pkg
+git_installer: pkg
 # system level gitconfig settings
 git_config_protocol_map:
   - uid: '93f2b82088e744739a4cfb8a3df68925'
