Correcting main/tasks.yml reference to git_installer_type -> git_installer and including installation note for andrewrothstein.git_build ansible role

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,7 +14,7 @@
     name: andrewrothstein.git_build
   when: git_installer == 'source'
 
-- include_tasks: '{{ git_installer_type }}.yml'
+- include_tasks: '{{ git_installer }}.yml'
   when: git_installer != 'source' 
 
 - name: configurate git
