--- a/test.yml
+++ b/test.yml
@@ -4,15 +4,21 @@
     git_config_protocol_map:
       - enabled: false
         uid: '93f2b82088e744739a4cfb8a3df68925'
-        url: 'ssh://git@github.com'
-        insteadOf: 'git://github.com'
+        url: ssh://git@github.com
+        insteadOf: git://github.com
       - enabled: false
         uid: '0483a896-fc31-11e6-839d-001b219ca430'
-        url: 'ssh://git@gist.github.com'
-        insteadOf: 'git://gist.github.com'
+        url: ssh://git@gist.github.com
+        insteadOf: git://gist.github.com
       - enabled: false
         uid: '5446806d328f42dc8be2e6d1e6139aa8'
-        url: 'https://'
-        insteadOf: 'git://'
+        url: https://
+        insteadOf: git://
   roles:
     - role: '{{ playbook_dir }}'
+  tasks:
+    - command: git config -l
+      register: git_config_test
+    - name: git config -l
+      debug:
+        msg: '{{ git_config_test.stdout }}'
