--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,8 @@
 ---
 # vars file for git
-git_target_cfg: '{% if git_privilege_escalation %}{{git_sys_config}}{% else %}{{git_usr_config}}{% endif %}'
+git_target_cfg: >-
+  {% if git_privilege_escalation %}
+  {{ git_sys_config }}
+  {% else %}
+  {{ git_usr_config }}
+  {% endif %}
