new CI. delint.

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,4 @@
 ---
 # vars file for git
-git_target_cfg: '{{ git_sys_config if git_privilege_escalation else git_usr_config }}'
+git_target_cfg: |
+  {{- git_sys_config if git_privilege_escalation else git_usr_config -}}
